--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <img src="images/File_000.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Junior and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm Junior and I'm a<br> <span class="typing-2"></span></div>
                     <p>I’m a Highly skilled software developer with 5 years of experience designing and
                         implementing complex software applications like mobile apps, websites and 2D games.
                         <br>
