--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="fixed-button">
         <a href="https://wa.me/7033451966?text=Hello%20fast%20fingers%2C%0A">
-          <img src="images/whatsapp.png" alt="Message Icon" class="button-icon">
+          <img src="images/whatsapp (3).png" alt="Message Icon" class="button-icon">
           <span class="button-message">Chat with Me</span>
         </a>
       </div> 
@@ -327,6 +327,28 @@
             </div>
         </div>
     </section>
+
+
+    <div class="connect-section">
+        <h2 class="connect-heading">Connect With Me Faster</h2>
+        <div class="social-icons">
+            <a href="#" class="icon-link">
+                <img src="images/linkedin-logo.png" alt="Linedin">
+                <span class="icon-name">Linkedin</span>
+            </a>
+            <a href="#" class="icon-link">
+                <img src="images/whatsapp (1).png" alt="WhatsApp">
+                <span class="icon-name">WhatsApp</span>
+            </a>
+            <a href="#" class="icon-link">
+                <img src="images/gmail-logo.png" alt="Gmail">
+                <span class="icon-name">Gmail</span>
+            </a>
+            <!-- Add more social media icons here -->
+        </div>
+    </div>
+
+
 
     <!-- footer section start -->
     <footer>
