--- a/index.html
+++ b/index.html
@@ -333,15 +333,15 @@
         <h2 class="connect-heading">Connect With Me Faster</h2>
         <div class="social-icons">
             <a href="#" class="icon-link">
-                <img src="images/linkedin-logo.png" alt="Linedin">
+                <div class="xo">      <img src="images/linkedin.png" alt="Linedin"></div>
                 <span class="icon-name">Linkedin</span>
             </a>
             <a href="#" class="icon-link">
-                <img src="images/whatsapp (1).png" alt="WhatsApp">
+                <div class="xo"> <img src="images/whatsapp (4).png" alt="WhatsApp"></div>
                 <span class="icon-name">WhatsApp</span>
             </a>
             <a href="#" class="icon-link">
-                <img src="images/gmail-logo.png" alt="Gmail">
+                <div class="xo"> <img src="images/gmail (1).png" alt="Gmail"></div>
                 <span class="icon-name">Gmail</span>
             </a>
             <!-- Add more social media icons here -->
