--- a/index.html
+++ b/index.html
@@ -53,17 +53,21 @@
 
 
     <!-- home section start -->
-    <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Software Developer & Digital Artist (Freelancer)</div>
-                <div class="text-2">Chisom Echebelem<br>
-                Junor</div>
-                <div class="text-3">Welcome to my <span class="typing"></span>,<br>Designed & Developed by me :)</div>
-                <a href="#contact">Hire me</a>
+    <div class="overlay"></div>
+        <section class="home" id="home">
+            <div class="max-width">
+                <div class="home-content">
+                    <div class="text-1">Software Developer & Digital Artist (Freelancer)</div>
+                    <div class="text-2">Chisom Echebelem<br>
+                    Junor</div>
+                    <div class="text-3">Welcome to my <span class="typing"></span>,<br>Designed & Developed by me :)</div>
+                    <a href="#contact">Hire me</a>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+    
+    
 
     <!-- about section start -->
     <section class="about" id="about">
