--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Junior</title>
@@ -340,7 +340,7 @@
                 <div class="xo">      <img src="images/linkedin.png" alt="Linedin"></div>
                 <span class="icon-name">Linkedin</span>
             </a>
-            <a href="#" class="icon-link">
+            <a href="https://wa.link/ykjdq9" class="icon-link">
                 <div class="xo"> <img src="images/whatsapp (4).png" alt="WhatsApp"></div>
                 <span class="icon-name">WhatsApp</span>
             </a>
