--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <div class="fixed-button">
-        <a href="https://wa.me/7033451966?text=Hello%20fast%20fingers%2C%0A">
+        <a href="https://wa.link/ykjdq9">
           <img src="images/whatsapp (3).png" alt="Message Icon" class="button-icon">
           <span class="button-message">Chat with Me</span>
         </a>
