--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <div class="fixed-button">
-        <a href="https://wa.link/ykjdq9">
+        <a href="https://wa.link/dgcak9">
           <img src="images/whatsapp (3).png" alt="Message Icon" class="button-icon">
           <span class="button-message">Chat with Me</span>
         </a>
@@ -340,7 +340,7 @@
                 <div class="xo">      <img src="images/linkedin.png" alt="Linedin"></div>
                 <span class="icon-name">Linkedin</span>
             </a>
-            <a href="https://wa.link/ykjdq9" class="icon-link">
+            <a href="https://wa.link/dgcak9" class="icon-link">
                 <div class="xo"> <img src="images/whatsapp (4).png" alt="WhatsApp"></div>
                 <span class="icon-name">WhatsApp</span>
             </a>
