--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Junior</title>
@@ -345,13 +345,28 @@
                 <span class="icon-name">WhatsApp</span>
             </a>
             <a href="#" class="icon-link">
-                <div class="xo"> <img src="images/gmail (1).png" alt="Gmail"></div>
+                <div class="xo"> <img src="images/gmail (1).png" alt="Gmail" id="emailButton"></div>
                 <span class="icon-name">Gmail</span>
             </a>
+            <a href="#" class="icon-link">
+                <div class="xo"> <img src="images/github.png" alt="Github" ></div>
+                <span class="icon-name">Github</span>
+            </a>
+
             <!-- Add more social media icons here -->
         </div>
     </div>
 
+
+    <div class="connect-section2">
+        <h2 class="connect-heading2">OR</h2>
+        <div class="social-icons2">
+            <a href="#" class="icon-link2">
+                <div class="xo2">      <img src="images/wa.link_dgcak9.png" alt="QR Code"></div>
+                <span class="icon-name2">Scan The QR Code With Your Mobile Device to Connect With Me Faster</span>
+            </a>
+        </div>
+    </div>
 
 
     <!-- footer section start -->
