--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
     <div class="connect-section">
         <h2 class="connect-heading">Connect With Me Faster</h2>
         <div class="social-icons">
-            <a href="#" class="icon-link">
+            <a href="https://www.linkedin.com/in/chisomechebelemjunior/" class="icon-link">
                 <div class="xo">      <img src="images/linkedin.png" alt="Linedin"></div>
                 <span class="icon-name">Linkedin</span>
             </a>
@@ -344,11 +344,11 @@
                 <div class="xo"> <img src="images/whatsapp (4).png" alt="WhatsApp"></div>
                 <span class="icon-name">WhatsApp</span>
             </a>
-            <a href="#" class="icon-link">
+            <a href="" class="icon-link">
                 <div class="xo"> <img src="images/gmail (1).png" alt="Gmail" id="emailButton"></div>
                 <span class="icon-name">Gmail</span>
             </a>
-            <a href="#" class="icon-link">
+            <a href="https://github.com/chisomjnr" class="icon-link">
                 <div class="xo"> <img src="images/github.png" alt="Github" ></div>
                 <span class="icon-name">Github</span>
             </a>
