--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         delivering high-quality software solutions on time and on budget. Also experienced in
                         Business Management, Marketing strategy (Digital Marketing), Digital art, animation and human relations.</p>
                     <a href="/junior.pdf" download>Download My CV</a>
-                    <a href="aboutme.html" class="abouy" >Learn More About Me</a>
+                    <a href="" class="abouy" >Learn More About Me</a>
                 </div>
                 
             </div>
@@ -147,7 +147,7 @@
                         <div class="box">
                             <i class="fas fa-gamepad"></i>
                             <div class="text">2D Game<br>Development & Design</div>
-                            <p>I build and design 2D mobile(IOS & Android) games and also onlie games for desktops and mobile.
+                            <p>I build and design 2D mobile(IOS & Android) games and also online games for desktops and mobile.
 
                             </p>
                         </div>
@@ -179,7 +179,7 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                   
-                    <a href="aboutme.html">Learn More About My skills</a>
+                    <a href="#">Learn More</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -346,7 +346,7 @@
                 <div class="xo"> <img src="images/whatsapp (4).png" alt="WhatsApp"></div>
                 <span class="icon-name">WhatsApp</span>
             </a>
-            <a href="" class="icon-link">
+            <a href="#" class="icon-link">
                 <div class="xo"> <img src="images/gmail (1).png" alt="Gmail" id="emailButton"></div>
                 <span class="icon-name">Gmail</span>
             </a>
