--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         </a>
       </div> 
 
+      <div id="popup">
+        <div class="image-container">
+            <img src="images/IMG_9494.PNG" alt="Junior">
+            <h1>Hi There!</h1>
+        </div>
+          <p>It's Junior here, If you're looking to be impressed then you should really try viewing my Portfolio Website on your PC or desktop screen, the design setups & animations there are really insane & incredible.<br><br>Trust Me :)<br>I'm the developer, so i know.</p>
+          <button id="closeButton">Got it!</button>
+      </div>
+
 
 
     <!-- home section start -->
@@ -326,7 +335,7 @@
                             <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
                         <div class="button-area">
-                            <button type="submit">Send message</button>
+                            <button type="submit">Send Message</button>
                         </div>
                     </form>
                 </div>
