--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </div> 
 
       <div id="popup">
+        <div class="drawer" draggable="true"></div>
         <div class="image-container">
             <img src="images/IMG_9494.PNG" alt="Junior">
             <h1>Hi There!</h1>
@@ -348,15 +349,15 @@
         <h2 class="connect-heading">Connect With Me Faster</h2  >
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/chisomechebelemjunior/" class="icon-link">
-                <div class="xo">      <img src="images/linkedin.png" alt="Linedin"></div>
+                <div class="xo">      <img src="images/linkedin (2).png" alt="Linedin"></div>
                 <span class="icon-name">Linkedin</span>
             </a>
             <a href="https://wa.link/dgcak9" class="icon-link">
-                <div class="xo"> <img src="images/whatsapp (4).png" alt="WhatsApp"></div>
+                <div class="xo"> <img src="images/whatsapp (5).png" alt="WhatsApp"></div>
                 <span class="icon-name">WhatsApp</span>
             </a>
             <a href="#" class="icon-link">
-                <div class="xo"> <img src="images/gmail (1).png" alt="Gmail" id="emailButton"></div>
+                <div class="xo"> <img src="images/gmail (2).png" alt="Gmail" id="emailButton"></div>
                 <span class="icon-name">Gmail</span>
             </a>
             <a href="https://github.com/chisomjnr" class="icon-link">
