--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Message me</div>
+                    <div class="text">Message me, I'll reply</div>
                     <form action="#">
                         <div class="fields">
                             <div class="field name">
