--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
+<!-- Created By Junior-->
 <html lang="en">
 <head>
     <link rel="shortcut icon" type="x-icon" href="images/">
