--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         JavaScript, React and C++, Just to mention a few. Strong problem-solving skills and a proven track record of
                         delivering high-quality software solutions on time and on budget. Also experienced in
                         Business Management, Marketing strategy (Digital Marketing), Digital art, animation and human relations.</p>
-                    <a href="/junior.pdf" download>Download My CV</a>
-                    <a href="" class="abouy" >Learn More About Me</a>
+                    <a href="/Junior CV.pdf" download>Download My CV</a>
+                    <a href="about.html" class="abouy" >Learn More About Me</a>
                 </div>
                 
             </div>
