--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Junior</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -22,26 +22,41 @@
 
 </head>
 <body>
-    <div class="scroll-up-btn">
-        <i class="fas fa-angle-up"></i>
-    </div>
     <nav class="navbar">
-        <div class="max-width">
-            <div class="logo"><a href="#">Jun<span>ior.</span></a></div>
-            <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
-                <li><a href="#skills" class="menu-btn">Skills</a></li>
-                <li><a href="#teams" class="menu-btn">Projects</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
-                <li><a href="#connect" class="menu-btn">Connect Faster</a></li>
-            </ul>
-            <div class="menu-btn">
-                <i class="fas fa-bars"></i>
-            </div>
-        </div>
+        <a href="#" class="back-button">Back</a>
+        <div class="logo"><a href="#">Jun<span>ior.</span></a></div>
     </nav>
+
+
+
+
+
+    <section class="home-about">
+        <h1>I Am Junior</h1>
+        <h2>and I'm a Software Developer and Digital Artist</h2>
+        <div class="social-icons">
+            <img src="images/instagram.png" alt="Social Media Icon 1">
+            <img src="images/snapchat.png" alt="Social Media Icon 2">
+            <img src="images/twitter.png" alt="Social Media Icon 3">
+            <img src="images/linkedin (1).png" alt="Social Media Icon 4">
+        </div>
+    </section>
+
+    <section class="about-about">
+        <div class="image-container">
+            <img src="images/IMG_9494.PNG" alt="Junior">
+            <h1>The<br> Boring Stuff.</h1>
+        </div>
+
+        <p>I’m a Highly skilled software developer with 5 years of experience designing and
+            implementing complex software applications like mobile apps, websites and 2D games.
+            <br>
+            <br>
+            Proficient in a variety of programming languages, including Java, Python, CSS,
+            JavaScript, React and C++, Just to mention a few. Strong problem-solving skills and a proven track record of
+            delivering high-quality software solutions on time and on budget. Also experienced in
+            Business Management, Marketing strategy (Digital Marketing), Digital art, animation and human relations.</p>
+    </section>
 
     
     <div class="fixed-button">
