--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="x-icon" href="images/">
 
     <link rel="icon" href="images/logo.png" type="image/x-icon">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-..." crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,11 +21,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
 </head>
+<nav class="navbar">
+    <a href="#" class="back-button">Back</a>
+    <div class="logo"><a href="#">Jun<span>ior.</span></a></div>
+</nav>
 <body>
-    <nav class="navbar">
-        <a href="#" class="back-button">Back</a>
-        <div class="logo"><a href="#">Jun<span>ior.</span></a></div>
-    </nav>
+  
 
 
 
@@ -33,13 +34,25 @@
 
     <section class="home-about">
         <h1>I Am Junior</h1>
-        <h2>and I'm a Software Developer and Digital Artist</h2>
+        <h2>and I'm a Fullstack Software Developer and Digital Artist (Freelancer)</h2>
         <div class="social-icons">
-            <img src="images/instagram.png" alt="Social Media Icon 1">
-            <img src="images/snapchat.png" alt="Social Media Icon 2">
-            <img src="images/twitter.png" alt="Social Media Icon 3">
-            <img src="images/linkedin (1).png" alt="Social Media Icon 4">
+                    <!-- Instagram Icon -->
+            <i class="fab fa-instagram"></i>
+            
+            <!-- Snapchat Icon -->
+            <i class="fab fa-snapchat-ghost"></i>
+
+            <!-- Twitter Icon -->
+            <i class="fab fa-twitter"></i>
+
+            <!-- LinkedIn Icon -->
+            <i class="fab fa-linkedin"></i>
         </div>
+        <div class="buttons">
+            <button class="btn">Hire Me :)</button>
+            <button class="btn1">Download My CV</button>
+        </div>
+
     </section>
 
     <section class="about-about">
