--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         delivering high-quality software solutions on time and on budget. Also experienced in
                         Business Management, Marketing strategy (Digital Marketing), Digital art, animation and human relations.</p>
                     <a href="/Junior CV.pdf" download>Download My CV</a>
-                    <a href="about.html" class="abouy" >Learn More About Me</a>
+                    <a href="new.html" class="abouy" >Learn More About Me</a>
                 </div>
                 
             </div>
@@ -189,7 +189,7 @@
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
                   
-                    <a href="#">Learn More</a>
+                    <a href="new.html">Learn More</a>
                 </div>
                 <div class="column right">
                     <div class="bars">
