--- a/new.html
+++ b/new.html
@@ -48,7 +48,7 @@
 
         <div class="buttons">
 
-<a href="ndex.html">
+<a href="index.html">
     <button class="btn">Back Home</button>
   </a>
         </div>
