--- a/new.html
+++ b/new.html
@@ -51,6 +51,36 @@
 <a href="index.html">
     <button class="btn">Back Home</button>
   </a>
+
+  <div class="connect-section" id="connect">
+    <h2 class="connect-heading">Connect With Me Faster</h2  >
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/in/chisomechebelemjunior/" class="icon-link">
+            <div class="xo">      <img src="images/linkedin (2).png" alt="Linedin"></div>
+            <span class="icon-name">Linkedin</span>
+        </a>
+        <a href="https://wa.link/dgcak9" class="icon-link">
+            <div class="xo"> <img src="images/whatsapp (5).png" alt="WhatsApp"></div>
+            <span class="icon-name">WhatsApp</span>
+        </a>
+        <a href="#" class="icon-link">
+            <div class="xo"> <img src="images/gmail (2).png" alt="Gmail" id="emailButton"></div>
+            <span class="icon-name">Gmail</span>
+        </a>
+        <a href="https://github.com/chisomjnr" class="icon-link">
+            <div class="xo"> <img src="images/github.png" alt="Github" ></div>
+            <span class="icon-name">Github</span>
+            
+        </a>
+    
+        <!-- Add more social media icons here -->
+    </div>
+ 
+</div>
+
+
+
+
         </div>
 
     </section>
