--- a/projects.html
+++ b/projects.html
@@ -634,7 +634,7 @@
 
 
                 </p>
-                <a target="_blank" href="https://chisomjnr.github.io/homeverse">View the live Demo <i class="fas fa-arrow-right"></i></a>
+                <a target="_blank" href="https://chisomjnr.github.io/affixstores.com">View the live Demo <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
         <div class="item">
