--- a/hireme.html
+++ b/hireme.html
@@ -12,6 +12,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Junior  | Hire Me</title>
+    
+  <meta name="title" content="Hi There, I'm Junior">
+  <meta name="description" content="Welcome to my portfolio, Hire me & let's become business partners.">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="hireme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
