--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Junior  | Home</title>
+    
+
+    <meta name="title" content="Hi There, I'm Junior">
+    <meta name="description" content="Welcome to my portfolio, designed & developed by me.">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
