--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.9">
     <title>Junior  | My Projects</title>
+    
+  <meta name="title" content="Hi There, I'm Junior">
+  <meta name="description" content="Welcome to my portfolio, these are my projects:">
     <link rel="stylesheet" href="project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
