--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         delivering high-quality software solutions on time and on budget. Also experienced in
                         Business Management, Marketing strategy (Digital Marketing), Digital art, animation and human relations.</p>
                         <a href="hireme.html" class="abouy" >Hire Me</a>
-                    <a class="abou" href="/Junior's CV.pdf" download>Download My CV</a>
+                    <a class="abou" href="Chisom Echebelem Junior CV_20250410_032415_0000.pdf" download>Download My CV</a>
                    
                 </div>
                 
