--- a/index.html
+++ b/index.html
@@ -232,12 +232,14 @@
             
                 <div class="column right">
                     <div class="text">I'm Junior & I'm <br> A <strong style="color: orange;" class="typing-2"></strong></div>
-                    <p style="line-height: 1.9;">I’m a Highly skilled software developer with 6+ years of experience designing and
+                    <p style="line-height: 1.9;">
+                      
+                      I’m a skilled software developer with 6+ years of experience designing and
                         implementing complex software applications like mobile apps, websites and 2D games.
                         <br>
                         <br>
-                        Proficient in a variety of programming languages, including Java, Python, CSS,
-                        JavaScript, React and C++, Just to mention a few. Strong problem-solving skills and a proven track record of
+                        Proficient in a variety of programming languages, including React Native, PHP,  Python, CSS,
+                        JavaScript, SQL and C# Just to mention a few. Strong problem-solving skills and a proven track record of
                         delivering high-quality software solutions on time and on budget. Also experienced in
                         Business Management, Marketing strategy (Digital Marketing), Digital art, animation and human relations.</p>
                         <a href="hireme.html" class="abouy" >Hire Me</a>
